--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: "Josh Orcullo's GitHub Page"
+title: "Josh Orcullo"
 description: "A personal website showcasing my projects, blog posts, and professional journey."
-url: "https://yourusername.github.io" # Replace with your GitHub Pages URL
+url: "https://jorcullo.github.io/jorcullo" # Replace with your GitHub Pages URL
 baseurl: "" # Leave empty for user/organization pages or set to "/repository-name" for project pages
 
 # Theme settings
@@ -12,7 +12,7 @@ plugins:
 # Author details
 author:
   name: "Josh Orcullo"
-  email: "your-email@example.com"  # Update with your preferred contact email
+  email: "josh.ocullo@gmail.com"  # Update with your preferred contact email
 
 # Social links (optional)
 social:
