--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: "Josh Orcullo"
 #baseurl: "" # Leave empty for user/organization pages or set to "/repository-name" for project pages
 
 # Theme settings
-theme: jekyll-theme-minimal
+remote_theme: "jekyll/minima@1e8a445"
 
 
 # Author details
